# Dugout

./: .gitignore  .overmind.env  CLAUDE.md  Makefile  Procfile.dev  README.md
.claude/agents/: api-specialist.md  domain-reviewer.md  ios-specialist.md  privacy-auditor.md
.claude/commands/: new-api.md  sync-docs.md
.github/workflows/: deploy-web.yml
docs/: PRD.md  TDD.md  competitor-analysis.md  infra-hosting-evaluation.md
docs/design/: Dugout Design Spec.html  PRD.md  README.md  flows.md  ia.md  screens.md  tokens.md
dugout-ai/: .gitignore  CLAUDE.md  pyproject.toml  requirements.txt
dugout-ai/app/: main.py
dugout-ai/app/api/: attendance.py  lineup.py  matching.py  mercenary.py
dugout-ai/app/core/: config.py  errors.py
dugout-ai/app/schemas/: attendance.py  lineup.py  matching.py  mercenary.py
dugout-ai/app/services/: batting_order.py  hungarian.py  mercenary_filter.py  rule_predictor.py  scorer.py
dugout-ai/app/tooling/: archetypes.py  gameone.py  statline.py  synthetic.py
dugout-ai/scripts/: demo_lineup.py  dump_web_fixtures.py  dump_web_responses.py
dugout-ai/tests/: test_attendance.py  test_batting_order.py  test_gameone.py  test_lineup.py  test_lineup_validation.py  test_matching.py  test_mercenary.py  test_synthetic.py  test_web_responses.py
dugout-api/: CLAUDE.md  build.gradle.kts  settings.gradle.kts
dugout-ios/: CLAUDE.md  Project.swift
dugout-ios/Dugout.xcodeproj/: project.pbxproj
dugout-web/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
dugout-web/src/: App.tsx  (+5 more)
infra/: docker-compose.yml
(+362 files in other folders)
